@@ -291,3 +291,8 @@
         * Fix the ability to change the edje file source of an edje object
         inside a callback - it worked but you couldn't swallow/set text etc.
 
+2012-01-03  Tom Hacohen (TAsn)
+
+	* Entry: Added edje_object_part_text_style_user_set/get that'll use
+	the new corresponding textblock functions.
+
